nextcloud/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nextcloud-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: nextcloud-redirect@kubernetescrd
spec:
  tls:
  - secretName: nextcloud-cert
  rules:
  - host: store.sachiniyer.com
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: nextcloud
             port:
               number: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: nextcloud
spec:
  redirectScheme:
    scheme: https
    permanent: true
